fix: LottoPurchaseTest -> Lotto 생성자 매개변수 타입을 ArrayList 에서 List 로 변경